--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 spring.application.name=franchise-app
+
+spring.r2dbc.url=r2dbc:postgresql://127.0.0.1:5432/franchise_db
+spring.r2dbc.username=postgres
+spring.r2dbc.password=your_password
+
+# Puerto de la aplicacion
+server.port=8080
+
+# DDL Auto: Solo usar update/create-drop en desarrollo
+#spring.sql.init.mode=always
+#spring.sql.init.platform=postgres
+#spring.sql.init.schema-locations=classpath:schema.sql
+#spring.sql.init.data-locations=classpath:data.sql
+
+# Log de queries
+spring.r2dbc.properties.logging.level=DEBUG
+
+# Configuracion de logs (Opcional, util para depuracion)
+logging.level.org.springframework.r2dbc=DEBUG
+
+# Configurar rutas de OpenAPI/Swagger
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
