--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=franchise-app
 
-spring.r2dbc.url=r2dbc:postgresql://127.0.0.1:5432/franchise_db
+spring.r2dbc.url=r2dbc:postgresql://127.0.0.1:5432/franquicia_db
 spring.r2dbc.username=postgres
 spring.r2dbc.password=your_password
 
